<resources>
    <string name="app_name">MenuZ</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="enter_email">Please Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="invalid">Invalid Email</string>
    <string name="retry">Retry</string>
    <string name="no_conncetion">No Conncetio</string>
    <string name="there_s_no_network_conncetion_make_sure_the_you_re_connected_to_a_wi_fi_or_mobile_network_and_try_again">There\'s no network conncetion. Make sure the you\'re connected to a Wi-fi or mobile network and try again.</string>
    <string name="loading">Loading</string>
    <string name="session_expired">Session Expired</string>
    <string name="username">Username</string>
    <string name="home">Home</string>
    <string name="gallery">Gallery</string>
    <string name="language">Language</string>
    <string name="logut">Logout</string>
    <string name="add_new_order">New Order</string>
    <string name="current">Current Order</string>
    <string name="menu">Menu</string>
    <string name="alert_volley_timeout">Request Timeout</string>
    <string name="alert_volley_server_error">Server Error</string>
    <string name="deactive">You are currently inactive from admin</string>
    <string name="select_zone">Select Zone</string>
    <string name="new_order">New Order</string>
    <string name="east_zone">East Zone</string>
    <string name="select_table">Select Table</string>
    <string name="next">NEXT</string>
    <string name="number_of_guests">Select Guests:-</string>
    <string name="underdecelopment">Under Development</string>
    <string name="choose_your_preffered_language">Choose your preferred language</string>
    <string name="english">English</string>
    <string name="change_language" translatable="false">Change Language</string>
    <string name="cont">Continue</string>
    <string name="alert">Alert!</string>
    <string name="invalid_username">Invalid username and password</string>
    <string name="hebrew">Hebrew</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="single_breakfast">Single Breakfast</string>
    <string name="no_data_found">No data found</string>
    <string name="write_remark">Write Remark</string>
    <string name="remarks">Remarks</string>
    <string name="extra_egg">Extra Egg</string>
    <string name="done">Done</string>
    <string name="preparation">Preparation</string>
    <string name="no_item_found">No item found</string>
    <string name="select_waiter">Please Select waitor</string>
    <string name="enter_guest">Enter guest</string>
    <string name="no_preparation_found">No Preparation found</string>
    <string name="select_waiter_new">Select Waiter</string>
    <string name="order_preparation">Order Preparation</string>
    <string name="guest">Guest</string>
    <string name="grand_total">Grand Total</string>
    <string name="tax">Tax</string>
    <string name="your_cart">Your Cart</string>
    <string name="payment">Select Payment Method</string>
    <string name="current_order">Current Order</string>
    <string name="detail">Detail</string>
    <string name="information">Information</string>
    <string name="complete">Complete</string>
    <string name="order_detail">Order Detail</string>
    <string name="total">Total Price</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="no_order_found">No Order Found</string>
    <string name="no_addongroup_available">No AddonGroup Available</string>
    <string name="edit_order">Edit Order</string>
    <string name="save_continue"><![CDATA[Save & Continue]]></string>
    <string name="zone">Zone</string>
    <string name="add_more_items">Add More Items</string>
    <string name="balance">Balance</string>
    <string name="payment_text">Payment</string>
    <string name="cation">Cation</string>
    <string name="delete_popup">Are you sure you want to delete this item?</string>
    <string name="cancel">Cancel</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="edit_message">Are you sure you want to edit this item?</string>
    <string name="enable_guest_for_item">Enable guest for item</string>
    <string name="enable_course_for_item">Enable course for item</string>
    <string name="payment_n" translatable="false">Payment</string>
    <string name="enter_guest_new">Enter Guest</string>
    <string name="update_cart">Update Cart</string>
    <string name="add_manual_credit_card">Add Manual credit card</string>
    <string name="locked">Locked</string>
    <string name="check_all">Check all</string>
    <string name="uncheck_all">Uncheck all</string>
    <string name="_0">0</string>
    <string name="split">Split Item</string>
    <string name="discount">Discount on Item</string>
    <string name="ip_port_setting">IP:Port Setting</string>
    <string name="enter_ip">Enter IP</string>
    <string name="ip_server">IP Server</string>
    <string name="port_number_n">Port number</string>
    <string name="enter_port_number">Enter Port number</string>
    <string name="ok">OK</string>
    <string name="ip_server_new">Ip.Server</string>
    <string name="ip_port_setting_new">IP.Port Setting</string>
    <string name="print_noted">Print Notes</string>
    <string name="pick_year">Pick Year</string>
    <string name="port_number">Port Number</string>
    <string name="Ip_server">IP Server</string>
    <string name="title">Title</string>
    <string name="berger">Berger</string>
    <string name="print">Print</string>
    <string name="add_more_items_new">Add More items</string>
    <string name="no_limit">No limit</string>
    <string name="company_code">Company code</string>
    <string name="company_name">Company Name</string>
    <string name="action_clear">Clear</string>
    <string name="action_about">About AJ Demo</string>
    <string name="version">Version</string>
    <string name="unknown_version">Unknown version</string>
    <string name="hello_world">Hello world!</string>
    <string name="pref_title_device">Device</string>
    <string name="pref_title_firmware_version">Firmware version</string>
    <string name="pref_title_status">Status</string>
    <string name="pref_title_battery_level">Battery level</string>
    <string name="pref_title_sleep_timeout">Sleep timeout</string>
    <string name="pref_title_reset">Reset</string>
    <string name="pref_title_sleep">Sleep</string>
    <string name="pref_title_swipe_count">Swipe count</string>
    <string name="pref_title_battery_status">Battery status</string>
    <string name="pref_title_data_received">Data received</string>
    <string name="pref_title_key_serial_number">Key serial number</string>
    <string name="pref_title_track_data">Track data</string>
    <string name="pref_title_track1_mac">Track 1 - MAC</string>
    <string name="pref_title_track2_mac">Track 2 - MAC</string>
    <string name="pref_title_track1">Track 1</string>
    <string name="pref_title_jis2_data">JIS2 data</string>
    <string name="pref_title_primary_account_number">Primary account number</string>
    <string name="pref_title_primary_track_string">Track 2 String</string>
    <string name="pref_title_name">Name</string>
    <string name="pref_title_expiration_date">Expiration date</string>
    <string name="pref_title_service_code">Service code</string>
    <string name="pref_title_discretionary_data">Discretionary data</string>
    <string name="pref_title_track2">Track 2</string>
    <string name="pref_title_about_reader">About reader</string>
    <string name="pref_title_function">Function</string>
    <string name="pref_title_get_firmware_version">Get firmware version</string>
    <string name="pref_title_get_status">Get status</string>
    <string name="pref_title_set_sleep_timeout">Set sleep timeout</string>
    <string name="pref_title_reader_id">Reader ID</string>
    <string name="pref_title_custom_id">Custom ID</string>
    <string name="pref_title_device_id">Device ID</string>
    <string name="pref_title_get_custom_id">Get custom ID</string>
    <string name="pref_title_set_custom_id">Set custom ID</string>
    <string name="pref_title_get_device_id">Get device ID</string>
    <string name="pref_title_cryptographic_keys">Cryptographic keys</string>
    <string name="pref_title_new_master_key">New master key</string>
    <string name="pref_title_master_key">Master key</string>
    <string name="pref_title_aes_key">AES key</string>
    <string name="pref_title_set_master_key">Set master key</string>
    <string name="pref_title_set_aes_key">Set AES key</string>
    <string name="pref_title_use_default_key">Use default key</string>
    <string name="pref_title_dukpt_setup">DUKPT setup</string>
    <string name="pref_title_dukpt">DUKPT</string>
    <string name="pref_title_iksn">IKSN</string>
    <string name="pref_title_ipek">IPEK</string>
    <string name="pref_title_get_dukpt_option">Get DUKPT option</string>
    <string name="pref_title_set_dukpt_option">Set DUKPT option</string>
    <string name="pref_title_initialize_dukpt">Initialize DUKPT</string>
    <string name="pref_title_use_default_iksn_ipek">Use default IKSN &amp; IPEK</string>
    <string name="pref_title_track_data_setup">Track data setup</string>
    <string name="pref_title_encrypted_track1">Encrypted track 1</string>
    <string name="pref_title_encrypted_track2">Encrypted track 2</string>
    <string name="pref_title_masked_track1">Masked track 1</string>
    <string name="pref_title_masked_track2">Masked track 2</string>
    <string name="pref_title_get_track_data_option">Get track data option</string>
    <string name="pref_title_set_track_data_option">Set track data option</string>
    <string name="pref_title_picc">PICC</string>
    <string name="pref_title_atr">ATR</string>
    <string name="pref_title_timeout">Timeout</string>
    <string name="pref_title_card_type">Card type</string>
    <string name="pref_title_command_apdu">Command APDU</string>
    <string name="pref_title_response_apdu">Response APDU</string>
    <string name="pref_title_rf_config">RF configuration</string>
    <string name="pref_title_power_on">Power ON</string>
    <string name="pref_title_power_off">Power OFF</string>
    <string name="pref_title_transmit">Transmit</string>
    <string name="pref_title_set_rf_config">Set RF configuration</string>
    <string name="pref_title_icc">ICC</string>
    <string name="pref_title_power_action">Power action</string>
    <string-array name="power_action">
        <item>Power down</item>
        <item>Cold reset</item>
        <item>Warm reset</item>
    </string-array>
    <string name="pref_title_wait_timeout">Wait timeout</string>
    <string name="pref_title_protocol">Protocol</string>
    <string name="pref_title_t0">T=0</string>
    <string name="pref_title_t1">T=1</string>
    <string name="pref_title_active_protocol">Active protocol</string>
    <string name="pref_title_apdu">APDU</string>
    <string name="pref_title_power">Power</string>
    <string name="pref_title_set_protocol">Set protocol</string>
    <string name="pref_title_device_control">Device control</string>
    <string name="pref_title_control_code">Control code</string>
    <string name="pref_title_control_command">Control command</string>
</resources>