<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_wifi_black"
            android:layout_marginTop="20dp"
            android:tint="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mitr_regular"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/no_conncetion"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/mitr_regular"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/there_s_no_network_conncetion_make_sure_the_you_re_connected_to_a_wi_fi_or_mobile_network_and_try_again"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnRetry"
            android:fontFamily="@font/mitr_regular"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:layout_marginTop="60dp"
            android:text="@string/retry" />

    </LinearLayout>

</RelativeLayout>