<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar_home" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/ip_server_new"

        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:background="@drawable/bg_edt"

        android:layout_height="50dp">

        <EditText
            android:layout_width="match_parent"
            android:background="@null"
            android:fontFamily="@font/roboto_regular"
            android:id="@+id/edtIpServer"
            android:layout_marginLeft="5dp"
            android:digits="............012345678"
            android:layout_gravity="center"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp" />


    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/port_number_n"

        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:background="@drawable/bg_edt"

        android:layout_height="50dp">

        <EditText
            android:layout_width="match_parent"
            android:background="@null"
            android:inputType="number"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/roboto_regular"
            android:id="@+id/edPortNumber"
            android:layout_gravity="center"
            android:layout_height="wrap_content" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/llCartBtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <RelativeLayout
            android:id="@+id/rlCancelPort"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/darkred">

            <TextView
                android:id="@+id/txtCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rlSubmit"
            android:layout_width="0dp"
            android:layout_marginLeft="10dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/txtAddCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="16sp" />


        </RelativeLayout>

    </LinearLayout>





</LinearLayout>