<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rlParent"
    android:background="@color/white"
    tools:context=".ui.Order.fragment.PreprationsFragment">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:orientation="vertical">


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/preparationRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager" />


                <LinearLayout
                    android:id="@+id/llRemark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/preparationRecyclerView"
                    android:layout_gravity="center"
                    android:visibility="visible"
                    android:layout_margin="10dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|center_horizontal"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="start"
                        android:text="@string/remarks"
                        android:textColor="@color/black"
                        android:textSize="16sp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/et_boundry">

                        <EditText
                            android:id="@+id/edRemark"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:background="@null"
                            android:gravity="start"
                            android:hint="@string/write_remark"
                            android:padding="5dp"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/txtDone"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:background="@drawable/bg_button_placeholder"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/done"
                        android:visibility="gone"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                </LinearLayout>


            </RelativeLayout>




        </LinearLayout>

    </ScrollView>


    <TextView
        android:id="@+id/tvNodata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"

        android:fontFamily="@font/roboto_regular"
        android:text="@string/no_preparation_found"
        android:textColor="@color/black"
        android:visibility="gone" />

</RelativeLayout>