<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="10">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar_home" />
    <LinearLayout
        android:id="@+id/ll_zones"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="13dp"


        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/select_zone"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="10dp" />

        <View
            android:layout_width="match_parent"
            android:background="@color/darkgray"
            android:layout_height="1dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            >


        </android.support.v7.widget.RecyclerView>


    </LinearLayout>


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="6"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/select_table"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="8dp" />

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rlZone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"

                >


            </android.support.v7.widget.RecyclerView>


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight=".83"
        android:textAllCaps="false"
        android:background="@drawable/bg_button_drawable"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/save_continue"
        android:textColor="@color/white"
        tools:ignore="RtlHardcoded" />


</LinearLayout>